scrollbar fix

--- a/src/styles/mediumposts.module.less
+++ b/src/styles/mediumposts.module.less
@@ -20,7 +20,7 @@
     grid-template-columns: 10px;
     grid-template-rows: minmax(150px, 1fr);
     grid-template-columns: repeat(3, minmax(300px, 1fr));
-    overflow-x: scroll;
+    overflow-x: auto;
     scroll-snap-type: x proximity;
     padding-bottom: ~'calc(.75 * var(--gutter))';
     margin-bottom: ~'calc(-.25 * var(--gutter))';
